fix cac localisation

--- a/CustomAmmoCategories/Localization/AIM/Localization.json
+++ b/CustomAmmoCategories/Localization/AIM/Localization.json
@@ -53,6 +53,7 @@
     "Name": "AIM.TARGET_EFFECTS",
     "Localization": {
       "CULTURE_EN_US": "TARGET EFFECTS"
+    }
   },
   {
     "FileName": "",
@@ -423,6 +424,90 @@
     "Name": "AIM.REAR_ATTACK",
     "Localization": {
       "CULTURE_EN_US": "REAR ATTACK"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Dist",
+    "Localization": {
+      "CULTURE_EN_US": "Dist"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Damage",
+    "Localization": {
+      "CULTURE_EN_US": "Damage"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Long",
+    "Localization": {
+      "CULTURE_EN_US": "Long"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.GunneryShort",
+    "Localization": {
+      "CULTURE_EN_US": "G"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.PilotingShort",
+    "Localization": {
+      "CULTURE_EN_US": "P"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.GutsShort",
+    "Localization": {
+      "CULTURE_EN_US": "G"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.TacticsShort",
+    "Localization": {
+      "CULTURE_EN_US": "T"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Min",
+    "Localization": {
+      "CULTURE_EN_US": "Min"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Long",
+    "Localization": {
+      "CULTURE_EN_US": "Long"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Max",
+    "Localization": {
+      "CULTURE_EN_US": "Max"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.HP",
+    "Localization": {
+      "CULTURE_EN_US": "HP"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Wounds",
+    "Localization": {
+      "CULTURE_EN_US": "Wounds"
     }
   }
 ]
