--- a/CustomAmmoCategories/Localization/CAC/Localization.json
+++ b/CustomAmmoCategories/Localization/CAC/Localization.json
@@ -227,7 +227,7 @@
     "FileName": "",
     "Name": "CAC.FROMHITBYAMS",
     "Localization": {
-      "CULTURE_EN_US": ""{0} FROM {1} HIT BY AMS"
+      "CULTURE_EN_US": "{0} FROM {1} HIT BY AMS"
     }
   },
   {
