--- a/CustomAmmoCategories/Localization/CAC/RU/Localization.json
+++ b/CustomAmmoCategories/Localization/CAC/RU/Localization.json
@@ -3,28 +3,28 @@
     "FileName": "",
     "Name": "CAC.MissingAmmo",
     "Localization": {
-      "CULTURE_RU_RU": "ОТСУСТВУЮТ ПАТРОНЫ: У данного меха отсуствуют работоспособные бункеры патронов для {0}"
+      "CULTURE_RU_RU": "ОТСУСТВУЮТ БОЕПРИПАСЫ: У данного меха отсуствуют работоспособные бункеры с боеприпасом для {0}"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.ExtraAmmo",
     "Localization": {
-      "CULTURE_RU_RU": "ЛИШНИЕ ПАТРОНЫ: Данный мех несет патроны {0} которые не используются"
+      "CULTURE_RU_RU": "ЛИШНИЕ БОЕПРИПАСЫ: Данный мех несет боеприпасы {0} которые не используются ни одним орудием"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.CRIT",
     "Localization": {
-      "CULTURE_RU_RU": "{0} КРИТ.ПОВР."
+      "CULTURE_RU_RU": "{0} КРИТИЧЕСКОЕ ПОВРЕЖДЕНИЕ"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.DESTROYED",
     "Localization": {
-      "CULTURE_RU_RU": "{0} УНИЧТОЖ."
+      "CULTURE_RU_RU": "{0} УНИЧТОЖЕН"
     }
   },
   {
@@ -38,28 +38,28 @@
     "FileName": "",
     "Name": "CAC.AMMOEJECTIONERROR",
     "Localization": {
-      "CULTURE_RU_RU": "ОШИБКА СБРОСА БОЕЗАПАСА"
+      "CULTURE_RU_RU": "ОШИБКА СБРОСА БОЕКОМПЛЕКТА"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.AMMOEJECTIONERRORNOAMMO",
     "Localization": {
-      "CULTURE_RU_RU": "Это оружие не использует боеприпасы в этом режиме (или вообзе)"
+      "CULTURE_RU_RU": "Это оружие не использует боеприпасы в этом режиме (или вообще)"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.AMMOEJECTIONERRORMOVING",
     "Localization": {
-      "CULTURE_RU_RU": "Вы не можете сбросить боезапас если стреляли или передвигались в этом ходу"
+      "CULTURE_RU_RU": "Нельзя сбросить боекомплект если юнит стрелял или передвигался в этом ходу"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.AMMOJETTISONED",
     "Localization": {
-      "CULTURE_RU_RU": "{0} БОЕЗАПАС СБРОШЕН"
+      "CULTURE_RU_RU": "{0} БОЕКОМПЛЕКТ СБРОШЕН"
     }
   },
   {
@@ -108,7 +108,7 @@
     "FileName": "",
     "Name": "CAC.AMMOBOXEXHAUSTED",
     "Localization": {
-      "CULTURE_RU_RU": "БУНКЕР С БОЕПРИПАСАМИ ДЛЯ {0} ИСТОЩЕН"
+      "CULTURE_RU_RU": "КОРЗИНА С БОЕПРИПАСАМИ ДЛЯ {0} ПУСТА"
     }
   },
   {
@@ -150,21 +150,21 @@
     "FileName": "",
     "Name": "CAC.Unjammed",
     "Localization": {
-      "CULTURE_RU_RU": "Расклинило"
+      "CULTURE_RU_RU": "Снова функционирует"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.BURNDAMAGE",
     "Localization": {
-      "CULTURE_RU_RU": "УРОН ОТ ПЛАМЕНИ"
+      "CULTURE_RU_RU": "УРОН ОТ ПОЖАРА"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.HEATFROMFIRE",
     "Localization": {
-      "CULTURE_RU_RU": "+ {0} НАГРЕВА ОТ ПЛАМЕНИ"
+      "CULTURE_RU_RU": "+ {0} К НАГРЕВУ ОТ ПОЖАРА"
     }
   },
   {
@@ -178,7 +178,7 @@
     "FileName": "",
     "Name": "CAC.HEATFROMLANDMINES",
     "Localization": {
-      "CULTURE_RU_RU": "+ {0} НАГРЕВА ОТ МИН"
+      "CULTURE_RU_RU": "+ {0} К НАГРЕВУ ОТ МИН"
     }
   },
   {
@@ -199,35 +199,35 @@
     "FileName": "",
     "Name": "CAC.HEATFROMFIRE",
     "Localization": {
-      "CULTURE_RU_RU": "+ {0} НАГРЕВА ОТ ПЛАМЕНИ"
+      "CULTURE_RU_RU": "+ {0} К НАГРЕВУ ОТ ПЛАМЕНИ"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.EVADE",
     "Localization": {
-      "CULTURE_RU_RU": "УВЕРНУЛСЯ"
+      "CULTURE_RU_RU": "УКЛОНИЛСЯ"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.MISS",
     "Localization": {
-      "CULTURE_RU_RU": "ПРОМАХ! {0:0}%"
+      "CULTURE_RU_RU": " {0:0}% ПРОМАХ!"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.HEAT",
     "Localization": {
-      "CULTURE_RU_RU": "+{0} НАГРЕВ"
+      "CULTURE_RU_RU": "+{0} К НАГРЕВУ"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.FROMHITBYAMS",
     "Localization": {
-      "CULTURE_RU_RU": ""{0} ИЗ {1} СБИТО СПРО"
+      "CULTURE_RU_RU": "{0} ИЗ {1} СБИТО СПРО"
     }
   },
   {
