--- a/CustomAmmoCategories/Localization/AIM/RU/Localization.json
+++ b/CustomAmmoCategories/Localization/AIM/RU/Localization.json
@@ -3,14 +3,14 @@
     "FileName": "",
     "Name": "AIM.INSPIRED",
     "Localization": {
-      "CULTURE_RU_RU": "ВДОХНОВЕНИЕ"
+      "CULTURE_RU_RU": "ВДОХНОВЛЕН"
     }
   },
   {
     "FileName": "",
     "Name": "AIM.JUMPED",
     "Localization": {
-      "CULTURE_RU_RU": "ПРЫЖОК"
+      "CULTURE_RU_RU": "СОВЕРШЕН ПРЫЖОК"
     }
   },
   {
@@ -24,7 +24,7 @@
     "FileName": "",
     "Name": "AIM.TERRAIN",
     "Localization": {
-      "CULTURE_RU_RU": "ПОЗИЦИЯ"
+      "CULTURE_RU_RU": "ЛАНДШАФТ"
     }
   },
   {
@@ -38,14 +38,14 @@
     "FileName": "",
     "Name": "AIM.INSPIRED",
     "Localization": {
-      "CULTURE_RU_RU": "ВДОХНОВЕНИЕ"
+      "CULTURE_RU_RU": "ВДОХНОВЛЕН"
     }
   },
   {
     "FileName": "",
     "Name": "AIM.SPRINTED",
     "Localization": {
-      "CULTURE_RU_RU": "БЕГ"
+      "CULTURE_RU_RU": "ПОСЛЕ БЕГА"
     }
   },
   {
@@ -66,14 +66,14 @@
     "FileName": "",
     "Name": "AIM.TARGET_TERRAIN",
     "Localization": {
-      "CULTURE_RU_RU": "ПОЗИЦИЯ ЦЕЛИ"
+      "CULTURE_RU_RU": "ЛАНДШАФТ ЦЕЛИ"
     }
   },
   {
     "FileName": "",
     "Name": "AIM.MOVED",
     "Localization": {
-      "CULTURE_RU_RU": "ШАГ"
+      "CULTURE_RU_RU": "ПОСЛЕ ДВИЖЕНИЯ"
     }
   },
   {
@@ -87,7 +87,7 @@
     "FileName": "",
     "Name": "AIM.ARM_MOUNTED",
     "Localization": {
-      "CULTURE_RU_RU": "УСТ. В РУКЕ"
+      "CULTURE_RU_RU": "ОРУЖИЕ НА РУКЕ"
     }
   },
   {
@@ -143,28 +143,28 @@
     "FileName": "",
     "Name": "AIM.INDIRECT_FIRE",
     "Localization": {
-      "CULTURE_RU_RU": "НЕПР. ОГОНЬ"
+      "CULTURE_RU_RU": "ОГОНЬ НЕПРЯМ. НАВ."
     }
   },
   {
     "FileName": "",
     "Name": "AIM.DAMAGED",
     "Localization": {
-      "CULTURE_RU_RU": " ПОВРЕЖД."
+      "CULTURE_RU_RU": " ПОВРЕЖДЕНО"
     }
   },
   {
     "FileName": "",
     "Name": "AIM.CHASSIS_DAMAGED",
     "Localization": {
-      "CULTURE_RU_RU": "ШАССИ ПОВРЕДЖ."
+      "CULTURE_RU_RU": "ШАССИ ПОВРЕЖДЕНО"
     }
   },
   {
     "FileName": "",
     "Name": "AIM.OBSTRUCTED",
     "Localization": {
-      "CULTURE_RU_RU": "ПЛОХ.ВИДИМОСТЬ"
+      "CULTURE_RU_RU": "ЧАСТИЧ.ПЕРЕКРЫТИЕ"
     }
   },
   {
@@ -241,7 +241,7 @@
     "FileName": "",
     "Name": "AIM.PUNCHING_ARM",
     "Localization": {
-      "CULTURE_RU_RU": "УДАР РУКОЙ"
+      "CULTURE_RU_RU": "УДАРНАЯ РУКА"
     }
   },
   {
@@ -255,14 +255,14 @@
     "FileName": "",
     "Name": "AIM.HEIGHT_DIFF",
     "Localization": {
-      "CULTURE_RU_RU": "РАЗН.ВЫСОТ"
+      "CULTURE_RU_RU": "РАЗНОСТЬ ВЫСОТ"
     }
   },
   {
     "FileName": "",
     "Name": "AIM.RE_ATTACK",
     "Localization": {
-      "CULTURE_RU_RU": "ПОВТ.АТАКА"
+      "CULTURE_RU_RU": "ПОВТОРНАЯ АТАКА"
     }
   },
   {
@@ -283,14 +283,14 @@
     "FileName": "",
     "Name": "AIM.FRONT_ATTACK",
     "Localization": {
-      "CULTURE_RU_RU": "ФРОНТ.АТАКА"
+      "CULTURE_RU_RU": "ФРОНТАЛЬНАЯ АТАКА"
     }
   },
   {
     "FileName": "",
     "Name": "AIM.SIDE_ATTACK",
     "Localization": {
-      "CULTURE_RU_RU": "ФЛАНГ. АТАКА"
+      "CULTURE_RU_RU": "ФЛАНГОВАЯ АТАКА"
     }
   },
   {
@@ -417,6 +417,90 @@
     "Name": "AIM.REAR_ATTACK",
     "Localization": {
       "CULTURE_RU_RU": "АТАКА С ТЫЛА"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Dist",
+    "Localization": {
+      "CULTURE_EN_US": "Дист."
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Damage",
+    "Localization": {
+      "CULTURE_EN_US": "Урон"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Long",
+    "Localization": {
+      "CULTURE_EN_US": "Дальн."
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.GunneryShort",
+    "Localization": {
+      "CULTURE_EN_US": "С"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.PilotingShort",
+    "Localization": {
+      "CULTURE_EN_US": "П"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.GutsShort",
+    "Localization": {
+      "CULTURE_EN_US": "В"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.TacticsShort",
+    "Localization": {
+      "CULTURE_EN_US": "Т"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Min",
+    "Localization": {
+      "CULTURE_EN_US": "Мин."
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Long",
+    "Localization": {
+      "CULTURE_EN_US": "Далн."
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Max",
+    "Localization": {
+      "CULTURE_EN_US": "Макс."
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.HP",
+    "Localization": {
+      "CULTURE_EN_US": "ОЗ"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.Wounds",
+    "Localization": {
+      "CULTURE_EN_US": "Раны"
     }
   }
 ]
