CAC localization fix

--- a/CustomAmmoCategories/Localization/Components/DE/Localization.json
+++ b/CustomAmmoCategories/Localization/Components/DE/Localization.json
@@ -6539,8 +6539,8 @@
     "FileName": "C:\\Games\\steamapps\\common\\BATTLETECH\\Mods\\CustomAmmoCategories\\weapon\\Weapon_PPC_LPPCER_3.json",
     "Name": "Custom_Ammo_Categories.Weapon_PPC_LPPCER_3.UIName",
     "Localization": {
-      "CULTURE_EN_US": "Ion Cannon",
-      "CULTURE_DE_DE": "Ion Cannon"
+      "CULTURE_EN_US": "Ion Cannon--",
+      "CULTURE_DE_DE": "Ion Cannon--\n"
     }
   },
   {
@@ -6548,7 +6548,7 @@
     "Name": "Custom_Ammo_Categories.Weapon_PPC_LPPCER_3.Name",
     "Localization": {
       "CULTURE_EN_US": "Ion Cannon",
-      "CULTURE_DE_DE": "Ion Cannon"
+      "CULTURE_DE_DE": "Ionenkanone"
     }
   },
   {
