--- a/CustomAmmoCategories/Localization/Components/Localization.json
+++ b/CustomAmmoCategories/Localization/Components/Localization.json
@@ -5722,7 +5722,7 @@
     "FileName": "C:\\Games\\steamapps\\common\\BATTLETECH\\Mods\\CustomAmmoCategories\\weapon\\Weapon_PPC_LPPCER_3.json",
     "Name": "Custom_Ammo_Categories.Weapon_PPC_LPPCER_3.UIName",
     "Localization": {
-      "CULTURE_EN_US": "Ion Cannon"
+      "CULTURE_EN_US": "Ion Cannon--\n"
     }
   },
   {
