--- a/CustomAmmoCategories/Localization/Components/RU/Localization.json
+++ b/CustomAmmoCategories/Localization/Components/RU/Localization.json
@@ -6540,7 +6540,7 @@
     "Name": "Custom_Ammo_Categories.Weapon_PPC_LPPCER_3.UIName",
     "Localization": {
       "CULTURE_EN_US": "Ion Cannon",
-      "CULTURE_RU_RU": "Ионная пушка"
+      "CULTURE_RU_RU": "Ion Cannon--\n"
     }
   },
   {
