first new auras

--- a/CustomAmmoCategories/Localization/AIM/Localization.json
+++ b/CustomAmmoCategories/Localization/AIM/Localization.json
@@ -509,5 +509,12 @@
     "Localization": {
       "CULTURE_EN_US": "Wounds"
     }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.choose_target",
+    "Localization": {
+      "CULTURE_EN_US": "-choose target-"
+    }
   }
 ]
