--- a/CustomAmmoCategories/Localization/AIM/RU/Localization.json
+++ b/CustomAmmoCategories/Localization/AIM/RU/Localization.json
@@ -502,5 +502,12 @@
     "Localization": {
       "CULTURE_EN_US": "Раны"
     }
-  }
+  },
+  {
+    "FileName": "",
+    "Name": "AIM.choose_target",
+    "Localization": {
+      "CULTURE_EN_US": "-выбири цель-"
+    }
+  }  
 ]
