--- a/CustomAmmoCategories/Localization/CAC/Localization.json
+++ b/CustomAmmoCategories/Localization/CAC/Localization.json
@@ -236,5 +236,19 @@
     "Localization": {
       "CULTURE_EN_US": "EMERGENCY REPAIRS COMMENCING"
     }
+  },
+  {
+    "FileName": "",
+    "Name": "CAC.MINEFIELD",
+    "Localization": {
+      "CULTURE_EN_US": "MINEFIELD"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "CAC.FLAMES",
+    "Localization": {
+      "CULTURE_EN_US": "FLAMES"
+    }
   }
 ]
