--- a/CustomAmmoCategories/Localization/CAC/RU/Localization.json
+++ b/CustomAmmoCategories/Localization/CAC/RU/Localization.json
@@ -236,5 +236,19 @@
     "Localization": {
       "CULTURE_RU_RU": "ЗАДЕЙСТВОВАНА СИСТЕМА АВАРИЙНОГО РЕМОНТА"
     }
+  },
+  {
+    "FileName": "",
+    "Name": "CAC.MINEFIELD",
+    "Localization": {
+      "CULTURE_EN_US": "МИННОЕ ПОЛЕ"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "CAC.FLAMES",
+    "Localization": {
+      "CULTURE_EN_US": "ПЛАМЯ"
+    }
   }
 ]
