RU localization fixes

--- a/CustomLocalization/Localization/RU/ArtilleryUnits/Localization.json
+++ b/CustomLocalization/Localization/RU/ArtilleryUnits/Localization.json
@@ -2031,6 +2031,7 @@
     "Name": "Artillery_Units.vehiclechassisdef_THUMPER_TAV2.Name",
     "Localization": {
       "CULTURE_RU_RU": "САУ"
+    }
  },
 {
     "FileName": "\\Mods\\ArtilleryUnits\\chassis\\chassisdef_hunchback_HBK-4E.json",
@@ -2146,7 +2147,8 @@
     "Commentary": "",
     "Name": "Artillery_Units.chassisdef_hunchback_HBK-5E.Details",
     "Localization": {
-      "CULTURE_RU_RU": "Разработанная Словом Блейка и поступившая в производство в 3063 году модель 5E стал дальнейшим развитием 4E. Блейкисты попытались модернизировать мех, предназначенный для вооружения сил Милиции Протектората и подразделений Лиги Свободных миров, а так же устранить все недостатки старой модели. Установка нового Light Fusion Engine и шасси из эндостали позволили конструкторам заменить Thumper на более мощную артиллерийскую систему Sniper. Установленный CASE защищает мех от взрывов боекомплекта,  которые были ахиллесовой пятой модели 4E. Замена лазеров на  ER-версии и теплопоглотителей на двойные увеличила огневую мощь и дальность прицельного огня. Kali Yama даже пришлось расширять производственные мощности для того, чтобы удовлетворить высокий спрос на эту ставшую популярной среди пилотов Hunchback’ов и в артиллерийских подразделениях модель.”
+      "CULTURE_RU_RU": "Разработанная Словом Блейка и поступившая в производство в 3063 году модель 5E стал дальнейшим развитием 4E. Блейкисты попытались модернизировать мех, предназначенный для вооружения сил Милиции Протектората и подразделений Лиги Свободных миров, а так же устранить все недостатки старой модели. Установка нового Light Fusion Engine и шасси из эндостали позволили конструкторам заменить Thumper на более мощную артиллерийскую систему Sniper. Установленный CASE защищает мех от взрывов боекомплекта,  которые были ахиллесовой пятой модели 4E. Замена лазеров на  ER-версии и теплопоглотителей на двойные увеличила огневую мощь и дальность прицельного огня. Kali Yama даже пришлось расширять производственные мощности для того, чтобы удовлетворить высокий спрос на эту ставшую популярной среди пилотов Hunchback’ов и в артиллерийских подразделениях модель."
+    }
   },
   {
     "FileName": "\\Mods\\ArtilleryUnits\\chassis\\chassisdef_hunchback_HBK-5E.json",
