--- a/CustomAmmoCategories/Localization/AIM/RU/Localization.json
+++ b/CustomAmmoCategories/Localization/AIM/RU/Localization.json
@@ -302,7 +302,7 @@
   },
   {
     "FileName": "",
-    "Name": "AIM.Called_Shot",
+    "Name": "AIM.CALLED_SHOT",
     "Localization": {
       "CULTURE_RU_RU": "Прицельный выстрел"
     }
