--- a/Core/CustomAmmoCategories/Localization/CAC/RU/Localization.json
+++ b/Core/CustomAmmoCategories/Localization/CAC/RU/Localization.json
@@ -120,7 +120,7 @@
   },
   {
     "FileName": "",
-    "Name": "CAC.Destroyed",
+    "Name": "CAC.misfire_Destroyed",
     "Localization": {
       "CULTURE_RU_RU": "Уничтожено"
     }
@@ -134,7 +134,7 @@
   },
   {
     "FileName": "",
-    "Name": "CAC.Damaged",
+    "Name": "CAC.misfire_Damaged",
     "Localization": {
       "CULTURE_RU_RU": "Повреждено"
     }
