--- a/Core/CustomUnits/Localization/CU/Localization.json
+++ b/Core/CustomUnits/Localization/CU/Localization.json
@@ -59,7 +59,7 @@
     "FileName": "",
     "Name": "DROP.BAD_BIOME.TITLE",
     "Localization": {
-      "CULTURE_EN_US": "HEY VONKER!!",
+      "CULTURE_EN_US": "HEY LISTEN!",
       "CULTURE_RU_RU": "ВНИМАНИЕ"
     }
   },
