--- a/Core/CustomAmmoCategories/Localization/CAC/Localization.json
+++ b/Core/CustomAmmoCategories/Localization/CAC/Localization.json
@@ -419,5 +419,21 @@
     "Localization": {
       "CULTURE_EN_US": "Drag ammunition box to change order\nDouble-click mode to set default ammunition type\nNOTE! While selecting default ammunition box you are selecting default ammunition type, will be choosed for this weapon at start, NOT exact ammunition box.\nNOTE! Selecting ammunition boxes order you are selecting their depletion order, not ammunition type switch order. In automatic mode at first ammunition depleted from boxes from locations with lower armor"
     }
+  },
+  {
+    "FileName": "",
+    "Name": "CAC.CONCEQUENCE.DROP.TITLE",
+    "Localization": {
+      "CULTURE_EN_US": "DROP IS IMMINENT",
+      "CULTURE_RU_RU": "ВЫБРОСКА НЕИЗБЕЖЕНА"
+    }
+  },
+  {
+    "FileName": "",
+    "Name": "CAC.CONCEQUENCE.DROP.MESSAGE",
+    "Localization": {
+      "CULTURE_EN_US": "DROP IS IMMINENT. RESISTANCE IS FUTILE",
+      "CULTURE_RU_RU": "ВЫБРОСКА НЕИЗБЕЖНА. СОПРОТИВЛЕНИЕ БЕСПОЛЕЗНО"
+    }
   }
 ]
