RU localization update

--- a/InstallOptions/Localization/CustomLocalization-RU/Localization/RogueTech/RU/Kas_events/LocalizationDef.json
+++ b/InstallOptions/Localization/CustomLocalization-RU/Localization/RogueTech/RU/Kas_events/LocalizationDef.json
@@ -821,7 +821,7 @@
       "id": "event_mw_libraryAssassin.outcome_1.Options1.Details",
       "original": "Experience option.",
       "prevOriginal": "Experience option.",
-      "content": "Опытный вариант.",
+      "content": "Вариант с опытом.",
       "localizatorComment": "",
       "systemComment": "",
       "backColor": "#FFFFFF",
@@ -881,7 +881,7 @@
       "id": "event_mw_libraryLostech.Description.Name",
       "original": "Lostech of the Innersphere",
       "prevOriginal": "Lostech of the Innersphere",
-      "content": "ЛосТех Внутренней сферы",
+      "content": "Лостех Внутренней сферы",
       "localizatorComment": "",
       "systemComment": "",
       "backColor": "#FFFFFF",
@@ -929,7 +929,7 @@
       "id": "event_mw_libraryLostech.outcome_0_0.Options0.0.Name",
       "original": "Gets Lostech tag",
       "prevOriginal": "Gets Lostech tag",
-      "content": "Получите черту Лостех",
+      "content": "Получает черту Лостех",
       "localizatorComment": "",
       "systemComment": "",
       "backColor": "#FFFFFF",
@@ -941,7 +941,7 @@
       "id": "event_mw_libraryLostech.outcome_1.Options1.Details",
       "original": "Experience option.",
       "prevOriginal": "Experience option.",
-      "content": "Опытный вариант.",
+      "content": "Вариант с опытом.",
       "localizatorComment": "",
       "systemComment": "",
       "backColor": "#FFFFFF",
