More BonusDescription fixes

--- a/InstallOptions/Localization/CustomLocalization-RU/Localization/RogueTech/RU/RT Core/LocalizationDef.csv
+++ b/InstallOptions/Localization/CustomLocalization-RU/Localization/RogueTech/RU/RT Core/LocalizationDef.csv
@@ -9353,9 +9353,9 @@ Once the camera is off, Sumire says, «There's no way they push you on this. Too
 "MechEngineer.DeltaLRM.Full";"Delta LRM: resistance to AMS; has recoil";"Delta LRM: устойчивость к AMS; имеет отдачу.";;"#000000";"#FFFFFF"
 "MechEngineer.DeltaLRM.Long";"Delta";"Delta";;"#000000";"#FFFFFF"
 "MechEngineer.DeltaLRM.Short";"Delta";"Delta";;"#000000";"#FFFFFF"
-"MechEngineer.DEPRECIATED.Full";"ITEM WILL BE REMOVED SOON";"ПРОДАВАЙТЕ! СКОРО БУДЕТ УДАЛЕНО";;"#000000";"#FFFFFF"
-"MechEngineer.DEPRECIATED.Long";"DEPRECIATED";"УСТАРЕЛО";;"#000000";"#FFFFFF"
-"MechEngineer.DEPRECIATED.Short";"DEPRECIATED";"УСТАРЕЛО";;"#000000";"#FFFFFF"
+"MechEngineer.DEPRECATED.Full";"ITEM WILL BE REMOVED SOON";"ПРОДАВАЙТЕ! СКОРО БУДЕТ УДАЛЕНО";;"#000000";"#FFFFFF"
+"MechEngineer.DEPRECATED.Long";"DEPRECATED";"УСТАРЕЛО";;"#000000";"#FFFFFF"
+"MechEngineer.DEPRECATED.Short";"DEPRECATED";"УСТАРЕЛО";;"#000000";"#FFFFFF"
 "MechEngineer.DesignMask.Full";"{0} is created around the impact site";"{0} создается в области попадания.";;"#000000";"#FFFFFF"
 "MechEngineer.DesignMask.Long";"{0}";"{0}";;"#000000";"#FFFFFF"
 "MechEngineer.DesignMask.Short";"{0}";"{0}";;"#000000";"#FFFFFF"
