Collection of typo fixes and edits from various locations

--- a/Core/CustomAmmoCategories/Localization/CAC/Localization.json
+++ b/Core/CustomAmmoCategories/Localization/CAC/Localization.json
@@ -3,14 +3,14 @@
     "FileName": "",
     "Name": "CAC.MissingAmmo",
     "Localization": {
-      "CULTURE_EN_US": "MISSING AMMO: This 'Mech does not have an undamaged Ammo Bin for {0}"
+      "CULTURE_EN_US": "MISSING AMMO: No undamaged ammo bin for {0}\n"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.ExtraAmmo",
     "Localization": {
-      "CULTURE_EN_US": "EXTRA AMMO: This 'Mech carries unusable {0} Ammo"
+      "CULTURE_EN_US": "EXTRA AMMO: Unusable {0} ammo\n"
     }
   },
   {
@@ -45,14 +45,14 @@
     "FileName": "",
     "Name": "CAC.AMMOEJECTIONERRORNOAMMO",
     "Localization": {
-      "CULTURE_EN_US": "This weapon are not using ammo in this mode (or at all)"
+      "CULTURE_EN_US": "This weapon does not use ammo in this mode (or at all)"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.AMMOEJECTIONERRORMOVING",
     "Localization": {
-      "CULTURE_EN_US": "You can't eject ammo after moving or firing this round"
+      "CULTURE_EN_US": "You can't eject ammo after moving or firing this turn"
     }
   },
   {
@@ -108,21 +108,21 @@
     "FileName": "",
     "Name": "CAC.AMMOBOXEXHAUSTED",
     "Localization": {
-      "CULTURE_EN_US": "AMMO BOX {0} EXHAUSTED"
+      "CULTURE_EN_US": "AMMO BIN {0} EXHAUSTED"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.Jammed",
     "Localization": {
-      "CULTURE_EN_US": "Jammed"
+      "CULTURE_EN_US": "jammed"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.misfire_Destroyed",
     "Localization": {
-      "CULTURE_EN_US": "Destroyed"
+      "CULTURE_EN_US": "destroyed"
     }
   },
   {
@@ -136,7 +136,7 @@
     "FileName": "",
     "Name": "CAC.misfire_Damaged",
     "Localization": {
-      "CULTURE_EN_US": "Damaged"
+      "CULTURE_EN_US": "damaged"
     }
   },
   {
@@ -150,7 +150,7 @@
     "FileName": "",
     "Name": "CAC.Unjammed",
     "Localization": {
-      "CULTURE_EN_US": "Unjammed"
+      "CULTURE_EN_US": "unjammed"
     }
   },
   {
@@ -171,35 +171,35 @@
     "FileName": "",
     "Name": "CAC.LANDMINESEXPLODES",
     "Localization": {
-      "CULTURE_EN_US": "LANDMINES EXPLODES:{0}"
+      "CULTURE_EN_US": "Mines explode: {0}"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.HEATFROMLANDMINES",
     "Localization": {
-      "CULTURE_EN_US": "+ {0} HEAT FROM LANDMINES"
+      "CULTURE_EN_US": "+{0} heat from mines"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.INSTABILITYFROMLANDMINES",
     "Localization": {
-      "CULTURE_EN_US": "+ {0} INSTABILITY FROM LANDMINES"
+      "CULTURE_EN_US": "+{0} instability from mines"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.MELEEATTACKINTERUPTED",
     "Localization": {
-      "CULTURE_EN_US": "MELEE ATTACK INTERUPTED"
+      "CULTURE_EN_US": "Melee attack interrupted"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.HEATFROMFIRE",
     "Localization": {
-      "CULTURE_EN_US": "+ {0} HEAT FROM FIRE"
+      "CULTURE_EN_US": "+{0} heat from fire"
     }
   },
   {
@@ -228,14 +228,14 @@
     "FileName": "",
     "Name": "CAC.HEAT",
     "Localization": {
-      "CULTURE_EN_US": "+{0} HEAT"
+      "CULTURE_EN_US": "+{0} heat"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.FROMHITBYAMS",
     "Localization": {
-      "CULTURE_EN_US": "{0} FROM {1} HIT BY AMS"
+      "CULTURE_EN_US": "{0} of {1} hit by AMS"
     }
   },
   {
@@ -284,21 +284,21 @@
     "FileName": "",
     "Name": "CAC.WEAPON_SIDE_HEADER",
     "Localization": {
-      "CULTURE_EN_US": "CLICK TO TOGGLE WEAPON\nSHIFT+CLICK TOGGLE ALL WEAPONS SAME TYPE\n"
+      "CULTURE_EN_US": "Click to toggle weapon\n\nShift+click to toggle all weapons of the same type\n\n"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.MODE_SIZE_HEADER",
     "Localization": {
-      "CULTURE_EN_US": "LMB - NEXT MODE. RMB - PREV MODE\nSHIFT+CLICK SWITCH MODE ALL WEAPONS SAME TYPE\nAVAIBLE MODES:"
+      "CULTURE_EN_US": "LMB: next mode, RMB: prev. mode\n\nShift+click: switch mode for all weapons of the same type\n\nAvailable modes:"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.AMMO_SIDE_HEADER",
     "Localization": {
-      "CULTURE_EN_US": "LMB - NEXT AMMO. RMB - PREV AMMO\nSHIFT+CLICK SWITCH MODE ALL WEAPONS SAME TYPE\nCTRL+CLICK TO EJECT CURRENT AMMO\n"
+      "CULTURE_EN_US": "LMB: next ammo, RMB: prev. ammo\nShift+click: switch ammo for all weapons of the same type\nCtrl+click: to eject current ammo\n\n"
     }
   },
   {
@@ -312,14 +312,14 @@
     "FileName": "",
     "Name": "CAC.AMMO_COUNT_SIDE_HEADER",
     "Localization": {
-      "CULTURE_EN_US": "ammunition boxes:\n"
+      "CULTURE_EN_US": "ammo bins:\n"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.AMMO_COUNT_CURRENT_SIDE_HEADER",
     "Localization": {
-      "CULTURE_EN_US": "currnet ammunition box info:\n"
+      "CULTURE_EN_US": "current ammo bin info:\n"
     }
   },
   {
@@ -410,14 +410,14 @@
     "FileName": "",
     "Name": "CAC.WO.USAGE.MODE.DETAILS",
     "Localization": {
-      "CULTURE_EN_US": "Double-click mode to set default mode\nYou can't change modes order only change default one"
+      "CULTURE_EN_US": "Double-click mode to set default mode\nYou can't change modes order, only change the default one"
     }
   },
   {
     "FileName": "",
     "Name": "CAC.WO.USAGE.AMMO.DETAILS",
     "Localization": {
-      "CULTURE_EN_US": "Drag ammunition box to change order\nDouble-click mode to set default ammunition type\nNOTE! While selecting default ammunition box you are selecting default ammunition type, will be choosed for this weapon at start, NOT exact ammunition box.\nNOTE! Selecting ammunition boxes order you are selecting their depletion order, not ammunition type switch order. In automatic mode at first ammunition depleted from boxes from locations with lower armor"
+      "CULTURE_EN_US": "Drag ammo bin to change order\nDouble-click mode to set default ammunition type\nNOTE! While selecting default ammo bin, you are selecting default ammunition type that will be chosen for this weapon at start, not the exact ammo bin.\nNOTE! Selecting ammo bin order you are selecting their depletion order, not ammunition type switch order. In automatic mode, ammunition is first depleted from bins in locations with lower armor"
     }
   },
   {
